Introducing native image plugin from GraalVM
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>