@@ -50,6 +50,7 @@
         <version.plugin.helidon>3.0.0</version.plugin.helidon>
         <version.plugin.helidon-cli>3.0.0</version.plugin.helidon-cli>
         <version.plugin.jar>3.0.2</version.plugin.jar>
+        <version.plugin.nativeimage>0.9.14</version.plugin.nativeimage>
         <version.plugin.os>1.5.0.Final</version.plugin.os>
         <version.plugin.protobuf>0.5.1</version.plugin.protobuf>
         <version.plugin.resources>2.7</version.plugin.resources>
@@ -168,6 +169,21 @@
                         <protocArtifact>com.google.protobuf:protoc:${version.lib.google-protobuf}:exe:${os.detected.classifier}</protocArtifact>
                         <pluginId>grpc-java</pluginId>
                         <pluginArtifact>io.grpc:protoc-gen-grpc-java:${version.lib.grpc}:exe:${os.detected.classifier}</pluginArtifact>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.graalvm.buildtools</groupId>
+                    <artifactId>native-maven-plugin</artifactId>
+                    <version>${version.plugin.nativeimage}</version>
+                    <configuration>
+                        <imageName>${project.build.finalName}</imageName>
+                        <fallback>false</fallback>
+                        <metadataRepository>
+                            <enabled>false</enabled>
+                        </metadataRepository>
+                        <buildArgs>
+                            <arg>--add-exports=org.graalvm.nativeimage.builder/com.oracle.svm.core.configure=ALL-UNNAMED</arg>
+                        </buildArgs>
                     </configuration>
                 </plugin>
             </plugins>
